version 0.6.11 - Validate at class level use class name instead of property field (is null)
Add key message in ConstraintException